[metadata]
name = mcap-ros2-support
version = 0.0.1
description = ROS2 support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_package_data = True
install_requires = 
    mcap
    rosbags
packages = find:
python_requires = >=3.8

[options.package_data]
mcap_ros2 = py.typed
